--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,12 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>org.webjars</groupId>
+		    <groupId>org.webjars.bower</groupId>
 		    <artifactId>bootstrap</artifactId>
 		    <version>4.3.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.webjars</groupId>
+		    <groupId>org.webjars.bower</groupId>
 		    <artifactId>jquery</artifactId>
 		    <version>3.4.1</version>
 		</dependency>
